--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ instagram_username: anubhav.guptaa
 
 # Build settings
 #theme: minimal-mistakes-jekyll
-theme: jekyll-theme-time-machine
+theme: jekyll-theme-slate
 plugins:
   - jekyll-feed
   
