--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,9 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-
+collections:
+ snip-bits:
+   output: true
 title: For-The-Love-Of-Nifty:)
 email: anubhavgupta2260@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
@@ -25,6 +27,8 @@ description: >- # this means to ignore newlines until "baseurl:"
  Heading for a financially independent generation and a Money Smart India
 baseurl: "fortheloveofnifty" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
+
+
 twitter_username:
 instagram_username: anubhav.guptaa  
 
@@ -36,7 +40,6 @@ theme: minima
 plugins:
   - jekyll-feed
   
-
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
