--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,11 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 collections:
-  Regulatories:
-    output: true
  snip-bits:
    output: true
+collections:
+  Regulatories:
+    output: true
 title: For-The-Love-Of-Nifty:)
 email: anubhavgupta2260@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
