--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ collections:
  snip-bits:
    output: true
 
-title: For-The-Love-Of-Nifty:)
+title: For The Love Of Nifty
 email: anubhavgupta2260@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
  This blog is for those who won't work for money but their money will work for them
